<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddEditExerciseActivity">

    <EditText
        android:id="@+id/editText_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_exercise_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_num_sets"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_exercise_name" />

    <EditText
        android:id="@+id/edit_text_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_num_reps"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_sets" />

    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_reps" />

    <EditText
        android:id="@+id/edit_text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_info_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_weight" />

    <EditText
        android:id="@+id/edit_text_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_video_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_info" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveExercise"
        android:text="@string/save_exercise_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_video" />

</androidx.constraintlayout.widget.ConstraintLayout>